# LLM-Inference-Stack

./: .claudeignore  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: .env.example
docker/: Dockerfile.gateway  Dockerfile.gateway-rust  Dockerfile.gpu-exporter-rust  Dockerfile.vllm  docker-compose.yml
examples/: client.py  test_api.py  test_gateway.py
gateway/: README.md  app.py  auth.py  circuit_breaker.py  config.py  logging_config.py  metrics.py  server.py  usage_db.py
loadtest/: runner.py
observability/: README.md
observability/grafana/dashboards/: llm_stack.json  request_logs.json
observability/grafana/provisioning/datasources/: postgres.yml  prometheus.yml
observability/prometheus/: alerts.yml  prometheus.yml
observability/promtail/: promtail-config.yml
rust/: Cargo.toml  README.md
rust/gateway/: Cargo.toml
rust/gateway/migrations/: 001_api_keys.sql  002_token_usage.sql  003_batches.sql  004_per_key_controls.sql  005_request_logs.sql
rust/gateway/src/: admin.rs  auth.rs  backends.rs  batches.rs  circuit_breaker.rs  config.rs  error.rs  keys.rs  main.rs  metrics.rs  proxy.rs  quota.rs  rate_limiter.rs  request_log.rs  tracing_setup.rs
rust/gpu-exporter/: Cargo.toml
rust/gpu-exporter/src/: main.rs
scripts/: README.md  download_model.sh  gpu_exporter.py  launch_llamacpp.sh  launch_vllm.sh  tune_kernels.py  watchdog.py  write_kernel_configs.py
tests/: conftest.py  test_openai_compat.py
