[project]
name = "llm-inference-stack"
version = "0.2.0"
description = "Production LLM inference stack (Rust gateway + Python load tester)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "vllm==0.17.0rc1.dev114+g2a00d3241",
    # Load tester
    "httpx[http2]>=0.28",
    "rich>=13.9",
    "typer>=0.15",
    "numpy>=2.0",
    # Monitoring / scripts
    "prometheus-client>=0.21",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "aiofiles>=24.1",
    "llama-cpp-python>=0.3.16",
]

[project.scripts]
# Run the load tester via: uv run loadtest
loadtest = "loadtest.runner:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "openai>=1.0",
    "respx>=0.21",
    "asgi-lifespan>=2.0",
    # Gateway runtime deps (subset without vllm/torch)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "slowapi>=0.1.9",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_inference_stack"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
name = "vllm-nightly"
url = "https://wheels.vllm.ai/nightly"

[tool.uv]
override-dependencies = [
    "nvidia-cublas-cu12==12.9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
