[package]
name = "gpu-exporter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpu-exporter"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
prometheus-client = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
